Closed
Bug 338323
Opened 19 years ago
Closed 17 years ago
Mozilla/SeaMonkey Mail and Thunderbird ignore tag attributes in html messages
Categories
(MailNews Core :: MIME, defect)
MailNews Core
MIME
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0a3
People
(Reporter: andrewbass, Assigned: mnyromyr)
Details
Attachments
(2 files)
|
15.64 KB,
text/plain
|
Details | |
|
1.04 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.8.0.1) Gecko/20060130 SeaMonkey/1.0
Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.8.0.1) Gecko/20060130 SeaMonkey/1.0
While displaying HTML messages, Mozilla Mail 1.7.12, SeaMonkey Mail 1.0.0 and Thunderbird 1.5.0.2 ignore tag attributes if attribute name and attribute value are separated with ' = ' (space-equals-space), while these attributes are not ignored if name and value are separated with '=' (single equality sign).
None of the browsers I tested (Mozilla Navigator 1.7.12, SeaMonkey Navigator 1.0.0 and Firefox 1.5.0.1) shows any problem with the same HTML.
Reproducible: Always
Steps to Reproduce:
1. Download the attachment (Berkeley MBOX)
2. Import it as a mail folder
3. See for yourself
Actual Results:
Tag attributes described are ignored.
Expected Results:
Tag attributes described should have been processed.
| Reporter | ||
Comment 1•19 years ago
|
||
The same problem is with File->Open File (Seamonkey Mail) and File->Open Saved Message (Thunderbird), when opening an external *.eml file.
| Reporter | ||
Comment 2•19 years ago
|
||
| Reporter | ||
Comment 3•19 years ago
|
||
Obviously, this is only the case with attributes whose value contains a reference to a certain content ID ("cid:..."), since I may specify, say, <body bgcolor = "#cccccc">, and the document's background actually will display in grey.
Comment 4•17 years ago
|
||
Problem still exist in Seamonkey 1.1.9rc
Needs to be decided.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•17 years ago
|
||
Using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008032610 SeaMonkey/2.0a1pre I get two security errors:
Security Error: Content at mailbox:///<snip>/Mail/Local%20Folders/Test2?number=8017 may not load or link to about:blank.
OS: Linux → All
Hardware: PC → All
Version: unspecified → Trunk
Updated•17 years ago
|
Assignee: mail → nobody
Component: MailNews: Main Mail Window → MailNews: MIME
Product: Mozilla Application Suite → Core
QA Contact: mime
| Assignee | ||
Comment 6•17 years ago
|
||
The current code expects any = to be followed by " or ' and doesn't ignore spaces.
The patch fixes this.
Assignee: nobody → mnyromyr
Status: NEW → ASSIGNED
Attachment #311872 -
Flags: superreview?
Attachment #311872 -
Flags: review?
| Assignee | ||
Updated•17 years ago
|
Attachment #311872 -
Flags: superreview?(dmose)
Attachment #311872 -
Flags: superreview?
Attachment #311872 -
Flags: review?(dmose)
Attachment #311872 -
Flags: review?
Updated•17 years ago
|
Product: Core → MailNews Core
| Assignee | ||
Updated•17 years ago
|
Attachment #311872 -
Flags: superreview?(dmose)
Attachment #311872 -
Flags: superreview?(bienvenu)
Attachment #311872 -
Flags: review?(dmose)
Attachment #311872 -
Flags: review?(bienvenu)
Comment 7•17 years ago
|
||
Comment on attachment 311872 [details] [diff] [review]
ignore spaces behind = characters
thx, Karsten.
Attachment #311872 -
Flags: superreview?(bienvenu)
Attachment #311872 -
Flags: superreview+
Attachment #311872 -
Flags: review?(bienvenu)
Attachment #311872 -
Flags: review+
| Assignee | ||
Comment 8•17 years ago
|
||
Finally landed on trunk - sorry, I completely forgot about this...
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•17 years ago
|
||
Thanks, Karsten.
Updated•17 years ago
|
Target Milestone: --- → Thunderbird 3.0b1
You need to log in
before you can comment on or make changes to this bug.
Description
•