Bug 338323: whitespace padded html attributes ignored in messages; r/sr=bienvenu